# depenses

./: .gitignore  pyproject.toml  tasks.py  tox.ini
.github/workflows/: ci.yml
depenses/: manage.py
depenses/depenses/: api.py  asgi.py  settings.py  urls.py  wsgi.py
depenses/depenses/settings/: settings.py  testsettings.py
depenses/frontendapp/: urls.py  views.py
depenses/spendings/: admin.py  api_views.py  apps.py  history_api_view.py  member_check.py  models.py  room_api_views.py  serializers.py  services.py  urls.py  utils.py  views.py
depenses/spendings/migrations/: 0001_initial.py  0001_squashed_0003_auto_20200621_1508.py  0002_auto_20200621_1504.py  0002_auto_20200621_1600.py  0002_auto_20200727_2058.py  0002_auto_20201031_2007.py  0003_auto_20200621_1508.py  0003_auto_20200727_2100.py
depenses/spendings/room_api/: history_api_view.py  room_endpoint.py  urls.py  views.py
depenses/spendings/services/: __init__.py  history.py  state.py
depenses/spendings/tests/: test_models.py  test_room_state_service.py  tests.py
depenses/test_rest_api/: conftest.py  rest_api_wrapper.py  test_room_endpoints.py  test_users_endpoint.py  tests.py
depenses/users/: api.py  apps.py  models.py  signals.py  tests.py
depenses/users/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: AddNewExpanse.js  App.js  Error.js  History.js  Login.js  MainPage.js  NavBarComponent.js  api.js  index.js
frontend/src/styles/: _log.scss  _login.scss  _mainpage.scss  _variables.scss  main.scss
(+20 files in other folders)
